# HUMIC_Handover

./: README.md
hrl-kdl/pykdl_utils/: package.xml
hrl-kdl/pykdl_utils/src/pykdl_utils/: kdl_kinematics.py  kdl_parser.py
humic_description/: CMakeLists.txt  README.md  package.xml
humic_description/meshes/STL/: HUMIC_HAND_70mm.stl  column_base.stl  column_inner.stl  head_kinect.stl  l_elbow.stl  l_finger1_1.stl  l_foreArm.stl  l_hand.stl  l_lowerArm.stl  l_shoulder.stl  l_upperArm.stl  l_wrist.stl  neck.stl  neck_head.stl  r_elbow.stl  r_foreArm.stl  r_hand.stl  r_lowerArm.stl  r_shoulder.stl  r_upperArm.stl  r_wrist.stl  torso.stl  wheel_front_left.stl  wheel_front_right.stl  wheel_rear_left.stl  wheel_rear_right.stl
humic_description/urdf/: humic.gazebo.xacro  humic.left_arm_transmission.xacro  humic.right_arm_transmission.xacro  humic.urdf.xacro  materials.xacro
humic_gazebo/: CMakeLists.txt  README.md  package.xml
humic_gazebo/config/: humic_controller.yaml
humic_gazebo/launch/: humic.launch  humic_controller.launch  humic_controller_all.launch
humic_gazebo/models/human_box_10x10x20/: human_box_10x10x20.sdf  model.config
humic_gazebo/models/human_box_10x15x20/: human_box_10x15x20.sdf  model.config
humic_gazebo/models/human_box_10x20x20/: human_box_10x20x20.sdf  model.config
humic_gazebo/models/human_box_15x20x20/: human_box_15x20x20.sdf  model.config
humic_gazebo/models/human_box_20x15x20/: human_box_20x15x20.sdf  model.config
humic_gazebo/models/human_box_20x20x20/: human_box_20x20x20.sdf  model.config
humic_gazebo/models/human_box_20x30x20/: human_box_20x30x20.sdf  model.config
humic_gazebo/models/lab/: model.config  model.sdf
humic_gazebo/worlds/: empty.world  humic_handover.world
humic_rl/: CMakeLists.txt  package.xml  setup.py
humic_rl/launch/: humic_handover.launch
humic_rl/nodes/: humichandover_sac
humic_rl/src/: handoverobject.py  humic_handover_env.py  sac.py
