<?xml version="1.0"?>
<package format="3">>
  <name>pykdl_utils</name>
  <version>0.1.0</version>
  <description>

    pykdl_utils contains kdl_parser.py, for parsing URDF objects
     from the robot_model_py stack into PyKDL trees and chains, 
     and kdl_kinematics.py, for wrapping KDL kinematics calls, making
     kinematics requests in Python far simpler.  jointspace_kdl_kin.py
     also contains a KDLKinematics superclass which subscribes to /joint_states,
     automatically filling the FK and jacobian requests with the current joint
     angles.

  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kphawkins@gatech.edu">Kelsey Hawkins</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://ros.org/wiki/pykdl_utils</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>hrl_geom</buildtool_depend>
  <buildtool_depend>python_orocos_kdl</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>tf</buildtool_depend>
  <buildtool_depend>urdfdom_py</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hrl_geom</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
